--- a/sfg-di/src/main/resources/datasource.properties
+++ b/sfg-di/src/main/resources/datasource.properties
@@ -1,3 +1,3 @@
-guru.username=superuser
-guru.password=dbPassword
-guru.jdbcurl=someURLForDB
+#guru.username=superuser
+#guru.password=dbPassword
+#guru.jdbcurl=someURLForDB
