--- a/sfg-di/src/main/resources/application.properties
+++ b/sfg-di/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dog,EN
+spring.profiles.active=dog,EN,nonprod
 guru.username=superuser
 guru.password=dbPassword
 guru.jdbcurl=someURLForDB
