add configurationproperties to bind yml data in configuration file

--- a/sfg-di/src/main/resources/application.yml
+++ b/sfg-di/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   profiles:
-    active: EN,dog,prod
+    active:
+      - EN
+      - dog
+      - prod
 guru:
     username: YMLUserName
     password: YMLPassword
